@@ -1795,7 +1795,7 @@ public class StorageProxy implements StorageProxyMBean
                 {
                     handler.response(command.createResponse(iterator));
                 }
-                MessagingService.instance().addLatency(FBUtilities.getBroadcastAddress(), TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - start));
+                MessagingService.instance().addLatency(FBUtilities.getBroadcastAddress(), TimeUnit.NANOSECONDS.toMicros(System.nanoTime() - start));
             }
             catch (Throwable t)
             {
