@@ -1,4 +1,5 @@
 3.0.13
+ * Fix dynamic endpoint snitch for sub-millisecond use case (CASSANDRA-13577)
  * Make reading of range tombstones more reliable (CASSANDRA-12811)
  * Fix startup problems due to schema tables not completely flushed (CASSANDRA-12213)
  * Fix view builder bug that can filter out data on restart (CASSANDRA-13405)
